small layout bugs

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -34,7 +34,6 @@
 html {
     overflow-y:scroll;
 }
-
 body {
     background-color:$offwhite;
     font-size: 105%;
@@ -73,6 +72,10 @@ a {
     &:focus {
         text-decoration:underline;
         color:$lightgrey;
+    }
+
+    h1 &{
+        color:$offblack;
     }
 }
 // @start HEADLINES -------------------- //
@@ -135,11 +138,14 @@ hgroup {
     margin-left:auto;
     margin-right:auto;
 
-    @include respond-to(medium){
+    @include respond-to(medium) {
         width:85%;
     }
-} // default widths and margins
 
+    @include respond-to(grande) {
+        max-width:38em;
+    }
+} // default widths and margins
 p, 
 blockquote,
 ol,
@@ -157,7 +163,6 @@ dl {
         margin-bottom:1.2em;
     }
 }
-
 footer.about {
     font-style:italic;
 
@@ -167,9 +172,15 @@ footer.about {
         max-width:none;
     }
 }
+.centre {
+    figcaption {
+        margin:.5em 0 0 0;
+        width:100%;
+        text-align:left;
+    }
+}
 
 // @start MICRO -------------------- //
-
 em, i, cite, figcaption {
     font-style:italic;
 }
@@ -179,8 +190,8 @@ figcaption {
     line-height:1.55;
     margin-bottom:0;
     text-align:center;
-    margin-top:1em;
-    color:$grey;
+    margin-top:.5em;
+    color:$textgrey;
 
     h5 {
         margin:0 auto;
@@ -280,7 +291,7 @@ hr {
     border:none;
     color:#ccc;
     font-size:1.3em;
-    margin: 1em 0;
+    margin:1em 0 .6em 0;
     text-align:center;
     display:block;
 
@@ -594,7 +605,7 @@ section[role="main"] {
             p:after {
                 content:"~";
                 color:#bbb;
-                display:block;
+                display:inline;
                 margin-left:.35em;
                 margin-right:.1em;
             }
@@ -634,6 +645,10 @@ figure {
         background-color:$offgrey;
         width:90%;
         max-width:35em;
+
+        @include respond-to(grande) {
+            max-width:38em;
+        }
 
         figcaption {
             width:100%;
